syntax = "proto3";

package pb;

service AgentManager{
rpc StartDNS(DNSStartReq) returns (OperResult){}
rpc StopDNS(DNSStopReq) returns (OperResult){}
rpc CreateACL(CreateACLReq) returns (OperResult){}
rpc DeleteACL(DeleteACLReq) returns (OperResult){}
rpc CreateView(CreateViewReq) returns (OperResult){}
rpc UpdateView(UpdateViewReq) returns (OperResult){}
rpc DeleteView(DeleteViewReq) returns (OperResult){}
rpc CreateZone(CreateZoneReq) returns (OperResult){}
rpc DeleteZone(DeleteZoneReq) returns (OperResult){}
rpc CreateRR(CreateRRReq) returns (OperResult){}
rpc UpdateRR(UpdateRRReq) returns (OperResult){}
rpc DeleteRR(DeleteRRReq) returns (OperResult){} 
}

message OperResult {
    int32 ret_code = 1; //operation result:0 stands for success, 1 stands for fail.
    string ret_msg = 2; 
}
message DNSStartReq{
	string config = 1;
}

message DNSStopReq{
}

message CreateACLReq{
string aCLName = 1;
string aCLID = 2;
repeated string iPList = 3;
}

message DeleteACLReq{
string aCLID = 1;
}

message CreateViewReq{
string viewName = 1;
string viewID = 2;
int32 priority = 3;
repeated string aCLIDs = 4;
}

message UpdateViewReq{
string viewID = 1;
int32 priority = 2;
string aCLID = 3;
repeated string deleteIPList = 4;
repeated string newIPList = 5;
}

message DeleteViewReq{
string viewID = 1;
}

message CreateZoneReq{
string viewID = 1;
string zoneID = 2;
string zoneName = 3;
string zoneFileName = 4;
}

message DeleteZoneReq{
string viewID = 1;
string zoneID = 2;
}

message CreateRRReq{
string viewID = 1;
string zoneID = 2;
string rRID = 3;
string rRData = 4;
}

message UpdateRRReq{
string viewID = 1;
string zoneID = 2;
string rRID = 3;
string newRRData = 4;
}

message DeleteRRReq{
string viewID = 1;
string zoneID = 2;
string rRID = 3;
}


